Closed
Bug 217949
Opened 22 years ago
Closed 22 years ago
NTLM Authentication does not work on NT4
Categories
(Core :: Networking: HTTP, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla1.6alpha
People
(Reporter: TONNY, Assigned: darin.moz)
Details
(Keywords: fixed1.5, regression, Whiteboard: [ntlm-auth][proxy])
Attachments
(4 files)
|
39.40 KB,
text/plain
|
Details | |
|
2.91 KB,
text/plain
|
Details | |
|
279.71 KB,
text/plain
|
Details | |
|
1.25 KB,
patch
|
timeless
:
review+
mscott
:
superreview+
chofmann
:
approval1.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.5b) Gecko/20030829
Build Identifier: Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.5b) Gecko/20030829
When I try to authenticate with a site that uses NTLM authentication Mozilla
does not display the plogin/password page . I receive the error "HTTP 401.2 -
Unauthorized: Logon failed due to server configuration"
Reproducible: Always
Steps to Reproduce:
1.Go to a site which uses NTLM Authentication
2.
3.
Actual Results:
"HTTP 401.2 - Unauthorized: Logon failed due to server configuration"
Expected Results:
Display the login/password page
Comment 1•22 years ago
|
||
can you specify the URL ?
Are you authenticating with a username such as: DOMAIN\username ?
If still not working, please attach via "create a new attachment" a HTTP log of
this session (and this session only otherwise it can get quite large) ? See
instructions here:
http://www.mozilla.org/projects/netlib/http/http-debugging.html
Summary: NTLM Authentication doe not work → NTLM Authentication doe not work
| Reporter | ||
Comment 2•22 years ago
|
||
I can't login to the site, mozilla does not display the login form. I see the
error page ....
Comment 3•22 years ago
|
||
Did it work before (with 1.4) ? Does it happen for any URL (public or private) ?
Do you have a proxy configured ?
Summary: NTLM Authentication doe not work → NTLM Authentication does not work
Whiteboard: [ntlm-auth]
| Reporter | ||
Comment 4•22 years ago
|
||
It worked and still works with 1.4..
I can try only with this site (intranet)
I have an automatic proxy configuration
Comment 5•22 years ago
|
||
0[7818d0]: nsHttpChannel::GetAuthenticator [this=29c2450 scheme=negotiate]
0[7818d0]: nsHttpChannel::GetAuthenticator [this=29c2450 scheme=ntlm]
0[7818d0]: authentication type not supported
Does Mozilla choose Negotiate (unsupported) or is NTLM not working ?
Comment 6•22 years ago
|
||
This is similar to bug 211843 but I don't think bug 211843 was a regression,
maybe it's side effect from the PAC file parsing that changed between 1.4 and
1.5b, can you attach the PAC file (get it with wget or some file downloader) ?
To help reducing the regression window, can you also test 1.5a and report results.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Whiteboard: [ntlm-auth] → [ntlm-auth][proxy]
| Reporter | ||
Comment 7•22 years ago
|
||
How can i download 1.5a??
I'll check but i did not work also on 1.5a
Comment 8•22 years ago
|
||
see here http://ftp.mozilla.org/pub/mozilla/releases/mozilla1.5a/
can you also upload a HTTP log from a successful session using 1.4 ?
Comment 9•22 years ago
|
||
using
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5b) Gecko/20030827
I still can log into our intranet pages using NTLM auth
going to try the latest nightly ...
Comment 10•22 years ago
|
||
NTLM Auth does work
testet with Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5b)
Gecko/20030901
| Reporter | ||
Comment 11•22 years ago
|
||
With Mozilla1.5a it works
Comment 12•22 years ago
|
||
I see one difference, I'm not sure it makes a difference, it seems like the
first log (attachment 130711 [details]) using 1.5b was requesting
http://intranet.datasiel.net/ whereas log from attachment 130770 [details] using 1.5a
requested http://intranet/
As you're using a PAC file for automatic proxy, maybe a rule is not applied in
the latter case.
| Reporter | ||
Comment 13•22 years ago
|
||
I tried with intranet and intranet.datasiel.net with 1.5a and it works...
| Reporter | ||
Comment 14•22 years ago
|
||
Using
Mozilla/5.0 (Windows; U; WinNT4.0; en-US; rv:1.5b) Gecko/20030911
NTLM does not work...
Comment 15•22 years ago
|
||
I can confirm this; am using 1.5a win32 daily at work, need to access
NTLM-authenticated resources, have tried 1.5b and 1.5rc1, none of these are able
to authenticate. I get "Unauthorized" immediately, no login dialog as in 1.5a.
Updated•22 years ago
|
Flags: blocking1.5?
| Assignee | ||
Comment 16•22 years ago
|
||
Alessandro, Olivier: can you please check the following:
can you please check for the existance of the file "SECUR32.DLL" in your
C:\WINNT\System32 directory. if the file does not exist, then that indicates
the source of the problem. you might also try running my little ntlmdump program:
http://bugzilla.mozilla.org/attachment.cgi?id=130147&action=view
it will try to load SECUR32.DLL in the same way that mozilla does. if it
succeeds in outputing information, then at least we know that mozilla is not
having trouble loading the library.
the reason why i'm asking you to check for this is that in bug 212336, we
switched from loading "security.dll" to loading "secur32.dll" in order to make
NTLM work on Win9x. i suspect (and have heard it rumored) that NT4 does not
provide "secur32.dll" but only "security.dll" .. in which case we'd need to try
loading it as well. the timing for this regression seems to match up with this
change.
| Assignee | ||
Comment 17•22 years ago
|
||
if i am right, then this patch would solve the problem.
| Assignee | ||
Updated•22 years ago
|
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla1.6alpha
| Assignee | ||
Updated•22 years ago
|
Attachment #132089 -
Flags: superreview?(bryner)
Attachment #132089 -
Flags: review?(timeless)
| Assignee | ||
Comment 18•22 years ago
|
||
looks like my hunch was right...
http://www.experts-exchange.com/Programming/Programming_Languages/Visual_Basic/Q_20736138.html
i'll try to get this patch in for 1.5
Comment 19•22 years ago
|
||
Comment on attachment 132089 [details] [diff] [review]
v0 patch
need to get it in tonight if it is going to make the train for 1.5..
Attachment #132089 -
Flags: approval1.5+
Attachment #132089 -
Flags: review?(timeless) → review+
Updated•22 years ago
|
Attachment #132089 -
Flags: superreview?(bryner) → superreview+
Comment 20•22 years ago
|
||
checked into trunk and branch
Summary: NTLM Authentication does not work → NTLM Authentication does not work on NT4
| Assignee | ||
Comment 21•22 years ago
|
||
marking FIXED. thanks timeless!!
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.5?
You need to log in
before you can comment on or make changes to this bug.
Description
•