Bug 217949 NTLM Authentication does not work on NT4 patch by darin r=timeless sr=mscott